<resources>
    <string name="Brightness">Яркость</string>
    <string name="HD">HD</string>
    <string name="Is_refreshing">Обновление...</string>
    <string name="Progress">Прогресс</string>
    <string name="Rp">฿</string>
    <string name="SD">SD</string>
    <string name="Volume">Громкость</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Информация</string>
    <string name="about_me">Обо мне</string>
    <string name="about_us">О нас</string>
    <string name="accetp_voice_ad">Receive voiceprint ads</string>
    <string name="account">Номер учетной записи</string>
    <string name="account_bill_account">Счет</string>
    <string name="account_bind_account">Привязать учетку STB</string>
    <string name="account_bind_stb_for_sure">Вы уверены, что хотите привязать эту приставку?</string>
    <string name="account_change_password">Изменить пароль</string>
    <string name="account_confirm_new_password">Подтвердите новый пароль</string>
    <string name="account_existed">Пользователь уже существует</string>
    <string name="account_has_been_registered">Учетная запись зарегистрирована на другом устройстве.</string>
    <string name="account_login">Войти в систему</string>
    <string name="account_login_password">Пароль</string>
    <string name="account_login_username">Имя пользователя</string>
    <string name="account_logining">Обработка входа в систему…</string>
    <string name="account_logout">Выйти из аккаунта</string>
    <string name="account_me">Я</string>
    <string name="account_new_password">Новый пароль</string>
    <string name="account_nickname">Введите псевдоним</string>
    <string name="account_old_password">Прежний пароль</string>
    <string name="account_pair_my_box">Привязать приставку</string>
    <string name="account_parental_control_password">Пароль родительского контроля</string>
    <string name="account_password_limit">6 ~ 16 букв, цифр или _</string>
    <string name="account_register">Зарегистрироваться</string>
    <string name="account_register_confirm_password">Подтвердите пароль</string>
    <string name="account_register_password">Пароль</string>
    <string name="account_remember">Запомнить данные</string>
    <string name="account_speedy_id">Быстрый идентификатор</string>
    <string name="account_stb_name">Учетная запись STB:</string>
    <string name="account_submit">Готово</string>
    <string name="account_title">Учетная запись</string>
    <string name="account_title_iptv">Счет STB:  </string>
    <string name="account_title_ustv">Счет:  </string>
    <string name="account_unbind_account">Отвязать учетку STB</string>
    <string name="account_user_subscription">Подписка пользователя</string>
    <string name="action_settings">Настройки</string>
    <string name="active_time">Срок:</string>
    <string name="activity_center">Центр деятельности</string>
    <string name="ad">РЕКЛАМА</string>
    <string name="ad_seconds">%1$s c</string>
    <string name="ad_settings">Настройки рекламы</string>
    <string name="add_a_video">Add a video</string>
    <string name="add_buy_seatch">Add by search</string>
    <string name="add_favourite_msg1">Избранное заполнено, удалите элементы и повторите попытку</string>
    <string name="add_favourite_msg2">Ошибка добавления в избранное, нет места в папке</string>
    <string name="add_favourite_msg3">Ошибка добавления в избранное, элемент уже добавлен</string>
    <string name="add_favourite_msg4">Ошибка добавления в избранное, другой тип ошибки:</string>
    <string name="add_favourite_msg5">Ошибка добавления в избранное</string>
    <string name="add_from_collection">Add from my collection</string>
    <string name="add_from_watch_history">Add from watch history</string>
    <string name="add_personalized_tag_tips">It will increase the recommendation of such content after selecting tag.</string>
    <string name="add_picture">Добавить</string>
    <string name="add_to_queue">Добавить в очередь</string>
    <string name="add_tv_favorite_hint">Добавлено в избранное</string>
    <string name="add_vod_favorite_hint">Добавлено в избранное</string>
    <string name="add_vod_to_multiscreen_tip">Add movie or series to multi-screen</string>
    <string name="again">Повторить</string>
    <string name="age">Возраст</string>
    <string name="agree">Соглашаюсь</string>
    <string name="alert">Напоминание</string>
    <string name="alert_click_to_watch">Нажмите, чтобы отобразить подробности</string>
    <string name="alipay">AliPay</string>
    <string name="all_channel_txt">Все каналы</string>
    <string name="already_read_and_agree">Я прочитал(-а) и согласен(-на)</string>
    <string name="another_batch">another batch</string>
    <string name="app_create_time">app create time</string>
    <string name="app_hint_load_data">Загрузка...</string>
    <string name="app_hint_load_data_failed">Пожалуйста, попробуйте еще раз (%1$d).</string>
    <string name="app_name">ZALA yasna</string>
    <string name="app_start_bottom_txt">©2016 ZTE</string>
    <string name="area_limits">Просмотр видео ограничен для вашего региона.</string>
    <string name="at_forget_psd_13_limit_length">Ограничение длины должно составлять от 1 до 13, так как пароль включает «@».</string>
    <string name="at_forget_psd_29_limit_length">Пароль может содержать только буквы, цифры и _, а длина должна быть от 1 до 28.</string>
    <string name="at_forget_psd_txt">Забыли пароль?</string>
    <string name="at_forget_psd_valid_characters">Разрешённые символы включают в буквы, цифры,\'_\',\'@\'</string>
    <string name="at_not_support_tv_info">Эта услуга будет доступна в ближайшее время, пожалуйста, зайдите позже.</string>
    <string name="auth_fail">Ошибка авторизации</string>
    <string name="auth_failed">Возникла проблема, пожалуйста, попробуйте позже.</string>
    <string name="auth_failed_purchase">Извините, пожалуйста, купите продукт через приставку. Setp 1:</string>
    <string name="authcode_is_empty_hint">Код авторизации не может быть нулевым</string>
    <string name="authcode_is_error">Ошибка кода авторизации</string>
    <string name="authenticating">Проверка подлинности</string>
    <string name="auto">Авто</string>
    <string name="auto_login">Автоматический вход в систему</string>
    <string name="available_until">Доступно до</string>
    <string name="back_button_content_description">back</string>
    <string name="back_to_video">Назад к видео</string>
    <string name="bak_login_address">Bak Login address</string>
    <string name="balance_common">Закрыть</string>
    <string name="balance_dialog">Уважаемый абонент! \n Баланс Вашего лицевого счета x.xx руб. \n Пожалуйста, во избежание блокировки внестите платеж.</string>
    <string name="balance_display_svod">Не удалость получить список эпизодов.</string>
    <string name="balance_title">Ваш текущий баланс аккаунта</string>
    <string name="balance_txt">Баланс</string>
    <string name="batch_text">Обновить</string>
    <string name="bind_iptv_tip_content">Пожалуйста, сначала привяжите учетную запись STB.</string>
    <string name="block_columns">Блокировать по столбцу Vod</string>
    <string name="booking_success">Добавлено в ТВ-напоминания, напоминание придет вам позже</string>
    <string name="bookmark_select_all">Выбрать все</string>
    <string name="bookmark_select_null">Отменить все</string>
    <string name="bookmark_select_num">Выбран элемент: %1$d</string>
    <string name="bookmark_select_nums">Выбрано элементов: %1$d</string>
    <string name="bookmark_title">Недавно просмотренное</string>
    <string name="bottom_btn_cancelselect">Отменить все</string>
    <string name="bottom_btn_delete">Удалить(0)</string>
    <string name="bottom_btn_selectall">Выбрать все</string>
    <string name="bottom_menu_discovery">Рекомендации</string>
    <string name="bottom_menu_home">Главная</string>
    <string name="bottom_menu_live">Прямой эфир</string>
    <string name="bottom_menu_mine">Мое</string>
    <string name="bottom_menu_video">Видео</string>
    <string name="breakpoint_series_child">Эпизод %1$d</string>
    <string name="breakpoint_vod">%1$s:%2$s:%3$s</string>
    <string name="breakpoint_vod_not_enough_one_min">менее 1 мин</string>
    <string name="btn_watch">Смотреть</string>
    <string name="buffering">Буферизация</string>
    <string name="business_valid_time">действителен до:</string>
    <string name="buy_the_item_through_stb">извините, пожалуйста, купите продукт через приставку.</string>
    <string name="cancel">Back</string>
    <string name="cancel_autocontinue">Отмена автоматического продолжения</string>
    <string name="common_cancel">Отменить</string>
    <string name="login_btnlogin">Авторизоваться</string>
    <string name="login_the_system_first">Пожалуйста, войдите, чтобы продолжить.</string>
    <string name="play_activity_audio">Аудио</string>
    <string name="play_activity_subtitle">Субтитры</string>
    <string name="privacy_txt_one">Спасибо за использование приложения. Чтобы помочь вам безопасно использовать продукты и услуги, мы можем повторно использовать вашу информацию пользователя и информацию об устройстве после вашего разрешения. Пожалуйста внимательно прочитайте политику конфиденциальности перед его использованием.</string>
    <string name="privacy_txt_two">Если вы согласны с этой политикой, нажмите \"Соглашаюсь\" и начните пользоваться нашими услугами. Мы сделаем все возможное, чтобы защитить вашу личную информацию.</string>
    <string name="quality">Качество</string>
    <string name="scan_share_stepOne">Шаг 1: Выберите на телевизоре телепередачу или фильм. Нажмите xxx в меню телевизора, чтобы появился QR-код.</string>
    <string name="scan_share_stepThr">Шаг 3: Выберите приложение, с помощью которого хотите поделиться.</string>
    <string name="scan_share_stepTwo">Шаг 2: Нажмите «Сканировать» чтобы отсканировать QR-код на экране телевизора.</string>
    <string name="scan_share_text">Отсканируйте код на экране телевизора, чтобы поделиться.</string>
    <string name="settings_privacy">Заявление о конфиденциальности</string>
    <string name="share_title">Поделиться</string>
</resources>