<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/rl_privacy_dialog"
        android:background="@drawable/order_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commont_dialog_margen_value"
        android:layout_marginEnd="@dimen/commont_dialog_margen_value">
        <TextView
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/title"
            android:paddingTop="20dp"
            android:paddingBottom="7dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_privacy"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>
        <TextView
            android:textSize="16dp"
            android:textColor="@color/white"
            android:id="@+id/txt_privacy_one"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_txt_one"
            android:layout_below="@+id/title"
            android:lineSpacingExtra="2dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>
        <TextView
            android:textSize="16dp"
            android:textColor="@color/white"
            android:id="@+id/txt_privacy_two"
            android:paddingBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_txt_two"
            android:layout_below="@+id/txt_privacy_one"
            android:lineSpacingExtra="2dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/comm_dialog_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/rl_privacy_dialog"
        android:layout_marginStart="@dimen/commont_dialog_margen_value"
        android:layout_marginEnd="@dimen/commont_dialog_margen_value">
        <TextView
            android:textSize="18dp"
            android:textColor="@color/order_txt_bg"
            android:gravity="center"
            android:id="@+id/agree"
            android:background="@drawable/privacy_dialog_botton_background"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/agree"
            android:layout_weight="1"
            skin:enable="true"/>
    </LinearLayout>
</RelativeLayout>
