<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_phone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/top"
        skin:enable="true"
        style="@style/top_bar"/>
    <RelativeLayout
        android:background="@color/home_top_status_bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/scan_share_imagebtn"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/back_btn_style"
            android:layout_alignParentLeft="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
        <TextView
            android:textSize="@dimen/title_textsize"
            android:textColor="#fefefe"
            android:gravity="center"
            android:id="@+id/share_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/share_title"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_weight="4">
        <ImageView
            android:id="@+id/img_stb_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <TextView
            android:textSize="15dp"
            android:textColor="@color/binding_scanbutton_bg"
            android:id="@+id/scan_share_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/scan_share_text"/>
        <LinearLayout
            android:id="@+id/scan_share_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/scan_share_text"
            android:layout_alignLeft="@+id/scan_share_text">
            <TextView
                android:textSize="14dp"
                android:textColor="@color/binding_scanbutton_bg"
                android:id="@+id/txt_step_one"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/scan_share_stepOne"
                android:layout_weight="1"
                android:lineSpacingExtra="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scan_share_step2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/scan_share_step1"
            android:layout_alignLeft="@+id/scan_share_text">
            <TextView
                android:textSize="15dp"
                android:textColor="@color/binding_scanbutton_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/scan_share_stepTwo"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@+id/scan_share_step2"
            android:layout_alignLeft="@+id/scan_share_text">
            <TextView
                android:textSize="15dp"
                android:textColor="@color/binding_scanbutton_bg"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/scan_share_stepThr"
                android:layout_weight="1"/>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/scan_share_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <include layout="@layout/scan_share_layout"/>
    </LinearLayout>
</LinearLayout>
