<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_login_dialog"
        android:background="@drawable/common_dialog_corner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commont_dialog_margen_value"
        android:layout_marginEnd="@dimen/commont_dialog_margen_value">
        <LinearLayout
            android:gravity="center"
            android:background="@drawable/login_dialog_top_bg"
            android:layout_width="match_parent"
            android:layout_height="98dp">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/dialog_login_head"
                android:scaleType="fitCenter"/>
        </LinearLayout>
        <TextView
            android:textSize="18dp"
            android:textColor="@color/price_textcolor"
            android:gravity="center"
            android:id="@+id/login_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:text="@string/login_the_system_first"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>
        <View
            android:background="@color/line_grey"
            android:layout_width="match_parent"
            android:layout_height="1px"/>
        <LinearLayout
            android:gravity="center"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@+id/ll_ok"
            android:background="@drawable/lock_btn_buttom_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:textSize="18dp"
                android:textColor="@color/dialog_btn_txt_bg"
                android:gravity="center"
                android:id="@+id/login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/login_btnlogin"
                android:layout_weight="1"/>
            <View
                android:background="@color/line_color"
                android:layout_width="1px"
                android:layout_height="match_parent"/>
            <TextView
                android:textSize="18dp"
                android:textColor="@color/dialog_btn_txt_bg"
                android:gravity="center"
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/common_cancel"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
