<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:skin="http://schemas.android.com/android/skin"
    android:orientation="vertical"
    android:background="@color/share_app_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    skin:enable="true">
    <RelativeLayout
        android:orientation="vertical"
        android:id="@+id/rl_switch_setting"
        android:background="@color/profile_theme_view2_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/lv_switch_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:id="@+id/rl_video_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/rl_quality"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:paddingStart="18dp">
                <TextView
                    android:textSize="@dimen/common_14_px"
                    android:textColor="@color/mine_setting_text_textcolor"
                    android:id="@+id/txt_quality"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quality"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    skin:enable="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/rl_subtitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/bottom_quality"
                android:paddingStart="18dp">
                <TextView
                    android:textSize="@dimen/common_14_px"
                    android:textColor="@color/mine_setting_text_textcolor"
                    android:id="@+id/txt_subtitle"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_activity_subtitle"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    skin:enable="true"/>
            </RelativeLayout>
            <RelativeLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/rl_audio"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@+id/bottom_subtitle"
                android:paddingStart="18dp">
                <TextView
                    android:textSize="@dimen/common_14_px"
                    android:textColor="@color/mine_setting_text_textcolor"
                    android:id="@+id/txt_audio"
                    android:paddingLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_activity_audio"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"
                    skin:enable="true"/>
            </RelativeLayout>
            <View
                android:id="@+id/bottom_subtitle"
                android:background="@color/common_separateline_color"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/rl_subtitle"
                skin:enable="true"/>
            <View
                android:id="@+id/bottom_quality"
                android:background="@color/common_separateline_color"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/rl_quality"
                skin:enable="true"/>
            <View
                android:id="@+id/bottom_audio"
                android:background="@color/common_separateline_color"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/rl_audio"
                skin:enable="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <ImageView
        android:id="@+id/line_bottom"
        android:background="@color/share_separate2_bg"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        skin:enable="true"/>
    <Button
        android:textSize="20dp"
        android:textColor="@color/btn_text_style2"
        android:gravity="center"
        android:id="@+id/btn_cancel"
        android:background="@drawable/btn_bg_style"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="false"
        skin:enable="true"/>
</LinearLayout>
